Refactor CORS configuration to allow all origins